views/css/chef-index.css
/* ... */
.edit-recipe-container::-webkit-scrollbar {
    width: .6em;
    background-color: #ff8583;
    border-radius: 20px;
}

.edit-recipe-container::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

.edit-recipe-container::-webkit-scrollbar-thumb {
    background-color: var(--color5);
    border-radius: 20px;
    width: .6em;
}

.editable-recipe{
    margin: 1%;
}

/* .editable-recipe:hover{
    transform: scale(1.05);
} */

.edit-template{
    width: 20px;
    height: 20px;
    border: 2px solid white;
    background-image: url(../img/chef-edit.png);
    background-size: 50%;
    background-position: center;
    background-repeat: no-repeat;
    background-color: #ff2d29;
    margin: 5px;
    padding: 10px;
    position: absolute;
    right: 0;
    top: 0;
    border-radius: 50%;
    z-index: 3;
    transition: .2s;
}
.private-template{
    width: 20px;
    height: 20px;
    border: 2px solid white;
    background-image: url(../img/privateRecipe.png);
    background-size: 50%;
    background-position: center;
    background-repeat: no-repeat;
    background-color: #000000;
    margin: 5px;
    padding: 10px;
    position: absolute;
    right: 0;
    bottom: 22%;
    border-radius: 50%;
    z-index: 3;
    transition: .2s;
}

.edit-template:hover{
    background-image: url(../img/chef-edit-red.png);
    cursor: pointer;
    background-color: white;
    transform: rotate(360deg); 
}
.categoriasOpen{
    margin-top:2vh;
}
#categorias{
    display:none;
}

#notFoundRecipes{
    width: 100%;
    height: 34vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: #FFB5B5;
}
#notFoundRecipes img{
    width: 25vh;
    height: 25vh;
}
#follow-button{
    width: 77%;
    height: 5vh;
    border: none;
    background: #ff2c29;
    color: white;
    font-size: 1.2em;
    border-radius: 15px;
    box-shadow: 0px 0px 20px 1px #ff2c295c;
    cursor: pointer;
}
#followUnloged{
    width: 77%;
    height: 5vh;
    border: none;
    background: #ff2c29;
    color: white;
    font-size: 1.2em;
    border-radius: 15px;
    box-shadow: 0px 0px 20px 1px #ff2c295c;
    cursor: pointer;
}
#unlogedFollowSect{
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(0, 0, 0, 0.349);
    position: fixed;
    top: 0;
    left: 0;
    display: none;
    opacity: 0;
    z-index: 10;
    transition: .3s;
}

#unlogedFollowDiv{
    width: 45%;
    height: 25vh;
    display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: white;
   text-align: center;
   border-radius: 15px;
}

#unlogedFollowDiv h4{
    width: 100%;
    padding: 2vh 0;
    background-color: #FF2C29;
    color: white;
    font-size: 1.2em;
}

#logRedirect{
    width: 60%;
    height: 5vh;
    border: none;
    background: #ff2c29;
    color: white;
    font-size: 1.2em;
    border-radius: 15px;
    box-shadow: 0px 0px 20px 1px #ff2c295c;
    cursor: pointer;
}

#close-UnlogedFollow{
    position: fixed;
    background-color: transparent;
    border: none;
    width: 6vh;
    height: 6vh;
    top: 12vh;
    right: 5vh;
    margin: 0%;
    transition: .2s;
    background-image: url(../img/closeUpdateInfo.png);
    background-size: 60%;
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 50%;
    background-color: var(--color5);
    z-index: 2;
    box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.235);
    cursor: pointer;
}

/* ................... Responsive .............. */

@media (max-width: 1230px) {
    .recipe-template{
        width: 40%;
    }.nav-bar-container{
        width: 40%;
    }
}
/* ... */

